Regression: Undo shortcut in File Browser editor causes Blender to crash immediately #119860

Closed
opened 2024-03-25 06:37:44 +01:00 by Mingwei Lim · 3 comments

System Information
Operating system: macOS-14.4-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Max 1.2

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-25 01:02, hash: 792f4cc1d14b
Worked: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-22 03:47, hash: 365f5f8823d1

Caused by 57586df687

Short description of error
Right after Blender launching, navigating to the File Browser editor and hitting the undo shortcut(with cursor in the editor) causes Blender to crash immediately.

Exact steps for others to reproduce the error

  1. With Blender launched in factory settings, switch editor type to Filer Browser from the layout tab.

  2. Hit the undo shortcut with the cursor in the editor.

**System Information** Operating system: macOS-14.4-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Max 1.2 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-25 01:02, hash: `792f4cc1d14b` Worked: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-22 03:47, hash: `365f5f8823d1` Caused by 57586df68791520fa85772fb2f9d0b9821bbbeb0 **Short description of error** Right after Blender launching, navigating to the File Browser editor and hitting the undo shortcut(with cursor in the editor) causes Blender to crash immediately. **Exact steps for others to reproduce the error** <video src="/attachments/8df90a49-3b72-480e-89b5-222255537c45" title="undocrash.mp4" controls></video> 1. With Blender launched in factory settings, switch editor type to Filer Browser from the layout tab. 2. Hit the undo shortcut with the cursor in the editor.
Mingwei Lim added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-03-25 06:37:45 +01:00
Iliya Katushenock changed title from Undo shortcut in File Browser editor causes Blender to crash immediately to Regression: Undo shortcut in File Browser editor causes Blender to crash immediately 2024-03-25 06:55:44 +01:00
Iliya Katushenock added the
Interest
User Interface
Interest
Undo
labels 2024-03-25 06:56:03 +01:00
Member

Hi, thanks for the report. Can confirm the crash.

Hi, thanks for the report. Can confirm the crash.
Pratik Borhade added this to the 4.2 LTS milestone 2024-03-25 07:31:51 +01:00
Member

Will bisect

Will bisect
Member

Caused by 57586df687

CC @HooglyBoogly

Caused by 57586df68791520fa85772fb2f9d0b9821bbbeb0 CC @HooglyBoogly
Pratik Borhade self-assigned this 2024-03-25 11:16:19 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-25 14:00:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119860
No description provided.